--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,16 @@
 title: DROM
+description: just blog
+twitter_username: wavedrom
+github_username: drom
+author: Aliaksei Chapyzhenka
 
 minima:
   date_format: "%Y-%m-%d"
 
 markdown: kramdown
 theme: minima
+
+# Integrations
+disqus_short_name: drom
+disqus_show_comment_count: true
+google_analytics_tracking_id: UA-67058225-1
